# canair

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CarScanner all time log unique ECUs queried.txt  ISO-TP Payload.txt  Kia Soul EV CAN Messages.xlsx  LICENSE  RAW CAN Frames.txt  RAW_CAN_PLAN.md  README.md  RELEASING.md  TODO.md  TRANSPORT_PLAN.md  WICAN-CLI-STANDALONE.md  aroongta-CANBUS_Decoder- This repository contains a CAN-BUS data logger and data decoder-parser scri….webloc  canreq.md  canreq.py  config.example.yaml  decode.py  ecus.yaml  generate-profile.py  iso-tp-example-raw-frames.txt  mkdocs.yml  parse-scan-log.py  pid-coverage.py  pids-edit.py  pyproject.toml  query-captures.py  research.py  test.txt  validate-captures.py  validate-pids.py
2025-08-04 (Stationary)/: 2025-08-04 (Stationary).hexproj  CarScanner log 2025-08-04.txt
2025-08-07 (Driving)/: 2025-08-07 (Driving).hexproj  CarScanner log 2025-08-07.txt
2025-08-09 (Driving P-R-D-P)/: CarScanner log 2025-08-09.txt
2025-08-10 (Driving)/: CarScanner log 2025-08-10.txt
WiCAN Pro/: .env.example  AGENTS.md  CLI commands.md  TODO.md  WiCAN backup.json  bix.py  can-request.py  canreq.py  captures.yaml  cleanup-iocontrol-discoveries.py  config_2025-08-02.json  config_2025-08-03.json  config_2025-08-04.json  config_2025-08-11-bricked.json  config_2025-08-15.json  config_2025-09-07.json  config_2026-01-16.json  config_2026-02-03-experimental-do-not-upload.json  config_2026-02-03.bak.json  config_2026-02-03.json  decode-captures.py  ecus.yaml  generate-profile.py  ioniq-2017-pids.yaml  mqtt.yaml  pyproject.toml  query-captures.py  skm-wakeup.md  untested-pids-index.yaml  validate-captures.py  validate-pids.py  wican-iso-tp-index-conversion.md  wican.py
WiCAN Pro/Configs/: config_2026-02-06.json
WiCAN Pro/PIDs/: ioniq-2017.json
WiCAN Pro/Vehicle Profiles/: ioniq-2017.json  ioniq-2026-02-03-WIP.json  ioniq-2026-02-03-full-but-broken.json  ioniq-2026-02-03-minimal.json
WiCAN Pro/Vehicle Profiles/Data/: ioniq-2026-02-03-WIP-payload-1.json  ioniq-2026-02-03-WIP-payload-2.json  ioniq-2026-02-03-WIP-payload-3.json
WiCAN Pro/canlib/: __init__.py  byteindex.py  captures.py  constants.py  elm327.py  expression.py  formatting.py  lock.py  log.py  pids.py  pids_edit.py  session_manager.py  terminal.py
WiCAN Pro/canlib/modes/: __init__.py  discover.py  ecu.py  identity.py  interactive.py  iocontrol.py  iocontrol_scan.py  monitor.py  multi.py  param.py  raw.py  routines.py  routines_scan.py  scan.py  skm_wakeup.py  status.py  tester.py
WiCAN Pro/captures/: 2025-08-07.yaml  2026-04-14.yaml  2026-04-15.yaml  2026-04-16.yaml  2026-04-17-b.yaml  2026-04-17.yaml  2026-04-18.yaml  2026-04-19.yaml  2026-04-20.yaml  2026-04-21.yaml  AGENTS.md  SCHEMA.yaml
WiCAN Pro/configs/: config_2026-01-16.json  config_2026-02-03.bak.json  config_2026-02-03.json  config_2026-02-06.json  config_2026-04-13.json  config_2026-04-16.json
WiCAN Pro/docs/: IOControl CLI commands.md  TODO.md  can-request.py.md  canreq.md  decode-captures.py.md  generate-profile.py.md  obc-ldc-disambiguation.md  skm-wakeup-successful.md  wakeup-research.md
WiCAN Pro/pids/: _meta.yaml  _schema.yaml  aaf.yaml  ahb.yaml  avn.yaml  bcm.yaml  bms.yaml  bsd-l.yaml  bsd-r.yaml  clu.yaml  eps.yaml  esc.yaml  gateway.yaml  gsa.yaml  hvac.yaml  igpm.yaml  ldc.yaml  mcu.yaml  mfc.yaml  obc-746.yaml  plc.yaml  psm.yaml  ptc.yaml  rcam.yaml  sas.yaml  scc.yaml  skm.yaml  swrc-l.yaml  swrc-r.yaml  unknown-746.yaml  unknown-7d5.yaml  vcu.yaml  vess.yaml  wpc.yaml
WiCAN Pro/tests/: test_byteindex.py  test_elm327.py  test_formatting.py  test_iocontrol_scan.py  test_monitor.py  test_multi.py  test_pids.py  test_pids_edit.py  test_routines_scan.py  test_session_manager.py  test_skm_wakeup.py
WiCAN Pro/vehicle-profiles/: ioniq-2017.json
canlib/: __init__.py  align.py  byteindex.py  capture_dates.py  capture_journal.py  captures.py  cli.py  config.py  constants.py  decoding.py  dtc_describe.py  dtc_log.py  ecus.py  ecus_edit.py  elm327.py  first_run.py  formatting.py  keepmode.py  lock.py  log.py  pids.py  pids_edit.py  profile.py  query.py  safety.py  scan_presets.py  scan_state.py  session_manager.py  states.py  stats.py  terminal.py  timeouts.py  timing.py  tui.py  uds_parse.py  uds_services.py  wican_api.py  wican_bytes.py  wican_mode.py  xanalysis.py  (+1 more)
captures/: 2025-08-04.yaml  2025-08-07.yaml  2026-04-14.yaml  2026-04-15.yaml  2026-04-16.yaml  2026-04-17-b.yaml  2026-04-17.yaml  2026-04-18.yaml  2026-04-19.yaml  2026-04-20.yaml  2026-04-21.yaml  2026-07-19.yaml  2026-07-20.yaml  AGENTS.md  SCHEMA.yaml  schema.json
configs/: config_2026-01-16.json  config_2026-02-03.json  config_2026-04-13.json
docs/: index.md
logs-for-jejusoul/: test-plan.txt  (+1 more)
pids/: aat.yaml  bms.yaml  gsa.yaml  hvac.yaml  igpm.yaml  (+7 more)
(+350 files in other folders)
