[project]
name = "ioniq-can"
version = "0.1.0"
description = "CAN bus reverse engineering tools for Hyundai Ioniq via WiCAN Pro OBD-II dongle"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.0",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "ruamel.yaml>=0.18",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
