[project]
name = "canair"
version = "0.1.0"
description = "General-purpose CAN/UDS/KWP2000 diagnostic reverse-engineering CLI (WiCAN over-the-air)"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.0",
    "jsonschema>=4.0",
    "python-can>=4.6.1",
    "pyyaml>=6.0",
    "requests>=2.0",
    "rich>=13.0",
    "ruamel.yaml>=0.18",
    "textual>=1.0",
    "websockets>=12.0",
]

[project.scripts]
canair = "canlib.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canlib"]
# Ship the bundled example profile(s) so a fresh install has a working default
# (resolves to site-packages/profiles, matching BUNDLED_PROFILES_DIR).
exclude = ["profiles/*/logs", "**/__pycache__"]

[tool.hatch.build.targets.wheel.force-include]
"profiles" = "profiles"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
